<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg_black">

    <LinearLayout
        android:id="@+id/ll_all_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--        用户头像layout-->
        <LinearLayout
            android:id="@+id/ll_user_thumbnail_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"></LinearLayout>
        <!--        登录提示-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/click_to_sign"
            android:textSize="20sp" />

        <!--        用户钱包layout-->
        <LinearLayout
            android:id="@+id/ll_user_bonus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_my_wallet_money_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="0"
                    android:textColor="#00FFFF"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/wallet_balance"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_my_coupon_ll"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_my_red_paper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="0"
                    android:textColor="#FF0000"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/red_paper"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/gold_money_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="0"
                    android:textColor="#FF8800"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/gold_money"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>
        <!--        用户信息layout-->
        <View style="@style/split_line_grey" />

        <LinearLayout
            android:id="@+id/ll_user_info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View style="@style/split_line_grey" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="昵称"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/user_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_toStartOf="@+id/right"
                android:layout_toLeftOf="@+id/right"
                android:drawablePadding="10dp"
                android:text="Niantch"
                android:textColor="#999999"
                android:textSize="15sp"
                app:drawableRightCompat="@mipmap/icon_right" />

        </RelativeLayout>

        <View style="@style/split_line_grey" />

        <RelativeLayout
            android:id="@+id/user_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="电话号码"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/user_phone_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toLeftOf="@+id/right"
                android:drawableRight="@mipmap/icon_right"
                android:drawablePadding="10dp"
                android:text="136****9395"
                android:textColor="#999999"
                android:textSize="15sp"
                android:layout_alignParentEnd="true"
                android:layout_toStartOf="@+id/right"
                app:drawableEndCompat="@mipmap/icon_right"
                android:drawableEnd="@mipmap/icon_right"
                tools:ignore="UseCompatTextViewDrawableXml" />

        </RelativeLayout>

        <View style="@style/split_line_grey" />

        <RelativeLayout
            android:id="@+id/user_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="性别"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/user_sex_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toLeftOf="@+id/right"
                android:drawableRight="@mipmap/icon_right"
                android:drawablePadding="10dp"
                android:text="男"
                android:textColor="#999999"
                android:textSize="15sp" />

        </RelativeLayout>

        <View style="@style/split_line_grey" />

        <View
            style="@style/split_line_grey"
            android:layout_marginTop="3dp" />

        <RelativeLayout
            android:id="@+id/goods_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="收货地址"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/user_address_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:drawableRight="@mipmap/icon_right"
                android:drawablePadding="10dp"
                android:ellipsize="end"
                android:textColor="#999999"
                android:textSize="15sp" />
        </RelativeLayout>

        <View style="@style/split_line_grey" />

        <RelativeLayout
            android:id="@+id/my_collect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="我的收藏"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_right" />
        </RelativeLayout>

        <View style="@style/split_line_grey" />

        <View
            style="@style/split_line_grey"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"/>

        <RelativeLayout
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="登陆密码"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/alter_user_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:drawableRight="@mipmap/icon_right"
                android:drawablePadding="10dp"
                android:text="修改"
                android:textColor="#999999"
                android:textSize="15sp" />

        </RelativeLayout>

        <View style="@style/split_line_grey" />

        <RelativeLayout
            android:id="@+id/buy_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="支付密码"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:drawableRight="@mipmap/icon_right"
                android:drawablePadding="10dp"
                android:textColor="#999999"
                android:textSize="15sp" />

        </RelativeLayout>

        <View style="@style/split_line_grey" />

        <RelativeLayout
            android:id="@+id/log_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"

            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="退出登录"
                android:textColor="#ff0022"
                android:textSize="17sp" />

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>